--- a/README
+++ b/README
@@ -12,26 +12,8 @@
 - ⚙️ Tools: Git, GitHub, Eclipse
 
 ### 📚 Portfolio & Blog
-- 🗂️ Notion Portfolio: [https://nervous-trampoline-1f5.notion.site/1f4ce8371e248012aeabd7b0a72e8499?pvs=4]
-- ✍️ Blog: [https://joyfully-ever.tistory.com]
+- 🗂️ Notion Portfolio: https://nervous-trampoline-1f5.notion.site/1f4ce8371e248012aeabd7b0a72e8499?pvs=4
+- ✍️ Blog: https://joyfully-ever.tistory.com
 
 ### 📫 Contact
 - Email: donghyun960115@naver.com
-
-
-
-
-<!--
-**KimDongHyun0115/KimDongHyun0115** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-
-Here are some ideas to get you started:
-
-- 🔭 I’m currently working on ...
-- 🌱 I’m currently learning ...
-- 👯 I’m looking to collaborate on ...
-- 🤔 I’m looking for help with ...
-- 💬 Ask me about ...
-- 📫 How to reach me: ...
-- 😄 Pronouns: ...
-- ⚡ Fun fact: ...
--->
