--- a/README
+++ b/README
@@ -1,19 +1,19 @@
-## 🍻 Hi there!
+🍻 Hi there!
 
-🌿 *Joyfully Ever After*  
+🌿 Joyfully Ever After  
 자바로 개발 세계에 첫 발을 내딛고,  
 작은 프로젝트 하나씩 완성해가며 성장 중인  
 개발자 준비생 김동현입니다 😊
 
-### 🔧 Tech Stack
+🔧 Tech Stack
 - 💻 Languages: Java, JavaScript, HTML/CSS
 - 🌱 Frameworks: Spring Boot, MyBatis
 - 🛠️ Database: Oracle, MySQL
 - ⚙️ Tools: Git, GitHub, Eclipse
 
-### 📚 Portfolio & Blog
+ 📚 Portfolio & Blog
 - 🗂️ Notion Portfolio: https://nervous-trampoline-1f5.notion.site/1f4ce8371e248012aeabd7b0a72e8499?pvs=4
 - ✍️ Blog: https://joyfully-ever.tistory.com
 
-### 📫 Contact
+📫 Contact
 - Email: donghyun960115@naver.com
