--- a/README
+++ b/README
@@ -5,14 +5,14 @@
 개발자 준비생 김동현입니다 😊
 
 🔧 Tech Stack
-- 💻 Languages: Java, JavaScript, HTML/CSS
-- 🌱 Frameworks: Spring Boot, MyBatis
-- 🛠️ Database: Oracle, MySQL
-- ⚙️ Tools: Git, GitHub, Eclipse
+- 💻 Languages : Java, JavaScript, HTML/CSS
+- 🌱 Frameworks : Spring Boot, MyBatis
+- 🛠️ Database : Oracle, MySQL
+- ⚙️ Tools : Git, GitHub, Eclipse
 
  📚 Portfolio & Blog
-- 🗂️ Notion Portfolio: https://nervous-trampoline-1f5.notion.site/1f4ce8371e248012aeabd7b0a72e8499?pvs=4
-- ✍️ Blog: https://joyfully-ever.tistory.com
+- 🗂️ Notion Portfolio : https://nervous-trampoline-1f5.notion.site/1f4ce8371e248012aeabd7b0a72e8499?pvs=4
+- ✍️ Blog : https://joyfully-ever.tistory.com
 
 📫 Contact
-- Email: donghyun960115@naver.com
+- 📩 E-mail : donghyun960115@naver.com
